<docs>: Manual de Instalação atualizado para Maven